# dio-bank-api

./: .env.docker.example  .env.example  Dockerfile  README.md  bank.db  docker-compose.yml  docker_run.sh  local_run.sh  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 40b106f2c618_initial.py
src/: auth.py  config.py  database.py  main.py  models.py  schemas.py
src/routers/: transactions.py  users.py
tests/: conftest.py  test_auth.py  test_transactions.py
